test/files/pos/t10569.scala
object Test {
  object Foo
  Tuple1[Foo.type](Foo) match {
    case Tuple1(foo: Singleton) => foo
  }
}
